# kreuzcrawl

./: .dockerignore  .gh-actions-updater.toml  .gitattributes  .gitignore  .hadolint.yaml  .lychee.toml  .mock-server.env  .mock-server.out  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  Taskfile.yml  alef.toml  biome.json  composer.json  config.m4  deny.toml  go.work  go.work.sum  libtest_api.rlib  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pyproject.toml  server.json  tsconfig.json  zensical.toml
.ai-rulez/: .generated-manifest.json  config.toml  config.yaml
.ai-rulez/agents/: crawl-engineer.md
.ai-rulez/commands/: build.md  fix.md  lint.md  review.md  test.md
.ai-rulez/context/: dev-cycle.md
.cargo/: config.toml
.github/workflows/: ci-docker.yaml  ci-docs.yaml  ci-e2e.yaml  ci-fuzz.yaml  ci-lint.yaml  ci-mobile.yaml  ci-rust.yaml  ci-validate.yaml  ci.yaml  coverage.yaml  docs.yaml  kotlin.yml  publish-cli-proxy.yml  publish-docker.yaml  publish-pubdev.yaml  publish.yaml  swift.yml  zig.yml
.task/checksum/: _e2e_wf-mock-server-build
.task/config/: vars.yml
.task/languages/: brew.yml  c.yml  csharp.yml  dart.yml  elixir.yml  go.yml  kotlin-android.yml  kotlin.yml  node.yml  php.yml  python.yml  ruby.yml  rust.yml  swift.yml  wasm.yml  zig.yml
.task/tools/: docker.yml  docs.yml  general.yml  test-apps.yml  version-sync.yml
.task/workflows/: build.yml  dev-cycle.yml  e2e.yml  lint.yml  snippets.yml  test.yml
cli-proxy/npm/: install.js  package.json  test.mjs
cli-proxy/pypi/: README.md  pyproject.toml
cli-proxy/pypi/crawlberg_cli/: cli.py  downloader.py
cli-proxy/pypi/kreuzcrawl_cli/: downloader.py
crates/crawlberg/: Cargo.toml  README.md
crates/crawlberg-bindings-common/: Cargo.toml
crates/crawlberg-browser/: Cargo.toml  NOTICE  build.rs
crates/crawlberg-bypass/: Cargo.toml  README.md
crates/crawlberg-cli/: Cargo.toml
crates/crawlberg-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  crawlberg-ffi.pc
crates/crawlberg-jni/: Cargo.toml
crates/crawlberg-node/: Cargo.toml  README.md  package.json
crates/crawlberg-php/: Cargo.toml
crates/crawlberg-py/: Cargo.toml
crates/crawlberg-wasm/: Cargo.toml  README.md  package.json
crates/kreuzcrawl/: Cargo.toml  README.md
crates/kreuzcrawl-bindings-common/: Cargo.toml
crates/kreuzcrawl-bindings-common/src/: lib.rs
crates/kreuzcrawl-browser/: Cargo.toml  NOTICE  build.rs
crates/kreuzcrawl-browser/js/: bootstrap.js
crates/kreuzcrawl-browser/src/: adapter.rs  context.rs  lib.rs  lifecycle.rs  page.rs
crates/kreuzcrawl-browser/src/dom/: selector.rs  tree.rs  tree_sink.rs
crates/kreuzcrawl-browser/src/js/: mod.rs  module_loader.rs  ops.rs  runtime.rs
crates/kreuzcrawl-browser/src/net/: client.rs  cookies.rs  mod.rs  robots.rs  wreq_client.rs
crates/kreuzcrawl-bypass/: Cargo.toml  README.md
crates/kreuzcrawl-cli/: Cargo.toml
crates/kreuzcrawl-cli/src/: main.rs
crates/kreuzcrawl-cli/tests/: cli_test.rs
crates/kreuzcrawl-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  kreuzcrawl-ffi.pc
crates/kreuzcrawl-ffi/cmake/: kreuzcrawl-ffi-config.cmake
crates/kreuzcrawl-ffi/include/: kreuzcrawl.h
crates/kreuzcrawl-ffi/src/: lib.rs
crates/kreuzcrawl-jni/: Cargo.toml
crates/kreuzcrawl-node/: Cargo.toml  README.md  package.json
crates/kreuzcrawl-node/npm/darwin-arm64/: package.json
crates/kreuzcrawl-node/npm/darwin-x64/: package.json
crates/kreuzcrawl-node/npm/linux-arm64-gnu/: package.json
crates/kreuzcrawl-node/npm/linux-arm64-musl/: package.json
crates/kreuzcrawl-node/npm/linux-x64-gnu/: package.json
crates/kreuzcrawl-node/npm/linux-x64-musl/: package.json
crates/kreuzcrawl-node/npm/win32-arm64-msvc/: package.json
crates/kreuzcrawl-node/npm/win32-x64-msvc/: package.json
crates/kreuzcrawl-node/src/: lib.rs
crates/kreuzcrawl-php/: Cargo.toml
crates/kreuzcrawl-php/src/: Kreuzcrawl.php  composer.json  lib.rs
crates/kreuzcrawl-py/: Cargo.toml
crates/kreuzcrawl-py/src/: lib.rs  pyproject.toml
crates/kreuzcrawl-wasm/: .npmignore  Cargo.toml  README.md  index.js  package.json
crates/kreuzcrawl-wasm/src/: lib.rs
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.cli  Dockerfile.musl-build  Dockerfile.musl-ffi  Dockerfile.musl-nif  README.md
docs/: CHANGELOG.md  RELEASE.md  antibot.md  contributing.md  ecosystem.md  features.md  index.md  llms.txt  observability.md  robots.txt
docs/adr/: 001-engine-architecture.md  002-workspace-structure.md  003-crawl-orchestration.md  004-metadata-extraction.md  005-future-integration-points.md  006-e2e-testing-strategy.md  007-behavioral-fixture-derivation.md  008-browser-fallback.md  009-component-boundary.md
e2e/rust/: Cargo.toml
e2e/rust/.cargo/: config.toml
e2e/rust/src/: helpers.rs  main.rs
e2e/rust/tests/: auth_test.rs  batch_test.rs  browser_test.rs  cache_test.rs  common.rs  concurrent_test.rs  content_test.rs  cookies_test.rs  crawl_test.rs  download_test.rs  encoding_test.rs  engine_test.rs  error_custom_test.rs  error_test.rs  filter_test.rs  interaction_test.rs  links_test.rs  map_test.rs  markdown_test.rs  metadata_test.rs  middleware_test.rs  mock_server.rs  proxy_test.rs  rate_limit_test.rs  redirect_test.rs  robots_test.rs  scrape_test.rs  sitemap_custom_test.rs  sitemap_test.rs  ssrf_test.rs  stealth_test.rs  strategy_test.rs  stream_test.rs  validation_test.rs  warc_test.rs
fixtures/: schema.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: toml_loader.rs  waf_classify.rs
readme_templates/: language_package.md  root.md
scripts/: chrome-memwatch.sh  generate_readme.py  install.sh  readme_config.yaml  setup-swift-bridge.sh  sign_macos_wheels.py  sync_versions.py
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
tools/e2e-generator/: Cargo.toml
tools/e2e-generator/src/: fixtures.rs  main.rs  rust.rs
tools/mock-server/: Cargo.toml
tools/mock-server/src/: main.rs
(+2314 files in other folders)
