[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[dependency-groups]
dev = ["pyrefly>=1.1.1", "pytest-asyncio>=1.3", "validate-pyproject"]
docs = ["mkdocstrings>=1.0.3", "mkdocstrings-python>=2.0.3", "zensical"]

[tool.uv]
workspace.members = ["packages/python"]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "crates/**/*.rs" },
    { file = "crates/**/Cargo.toml" },
]
