[package]
name = "crawlberg-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name = "toml_loader"
path = "fuzz_targets/toml_loader.rs"
bench = false
doc = false
test = false

[[bin]]
name = "waf_classify"
path = "fuzz_targets/waf_classify.rs"
bench = false
doc = false
test = false

[dependencies]
crawlberg = { path = "../crates/crawlberg" }
libfuzzer-sys = "0.4"
