[package]
name = "kreuzcrawl-bindings-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared adapter layer for kreuzcrawl language bindings"

[dependencies]
kreuzcrawl = { path = "../kreuzcrawl" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
