[package]
name = "kreuzcrawl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line web crawler and scraper"

[[bin]]
name = "kreuzcrawl"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
kreuzcrawl = { path = "../kreuzcrawl" }
serde_json = { workspace = true }
tokio = { workspace = true }
