[package]
name = "kreuzcrawl-ffi"
version = "0.1.0"
edition = "2021"
description = "High-performance web crawling engine"
license = "Elastic-2.0"
repository = "https://github.com/kreuzberg-dev/kreuzcrawl"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
kreuzcrawl = { path = "../kreuzcrawl" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.28"
