[package]
name = "kreuzcrawl-php"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "PHP bindings for kreuzcrawl"
keywords = ["crawl", "scrape", "php", "web", "spider"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
ext-php-rs = { workspace = true }
kreuzcrawl = { path = "../kreuzcrawl", features = ["native-runtime"] }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }
