[package]
name = "kreuzcrawl-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for kreuzcrawl"
keywords = ["crawl", "scrape", "wasm", "webassembly", "web"]
categories = ["api-bindings"]

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures", "getrandom"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
kreuzcrawl = { path = "../kreuzcrawl", default-features = false }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }
