[package]
name = "kreuzcrawl-wasm"
version = "0.1.0"
edition = "2024"
description = "High-performance web crawling engine"
license = "Elastic-2.0"
repository = "https://github.com/kreuzberg-dev/kreuzcrawl"

[lib]
crate-type = ["cdylib"]

[dependencies]
kreuzcrawl = { path = "../kreuzcrawl" }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
