[package]
name = "kreuzcrawl-e2e-rust"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone crate — not part of the workspace to avoid circular dependency.
[workspace]

[dependencies]
kreuzcrawl = { path = "../../crates/kreuzcrawl" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
