[package]
name = "mock-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
clap = { version = "0.1.0-rc.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
